--- a/backend/services/auth/pyproject.toml
+++ b/backend/services/auth/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.122.0",
+    "psycopg2-binary>=2.9.11",
     "pwdlib[argon2]>=0.3.0",
     "pyjwt>=2.10.1",
+    "python-dotenv>=1.2.1",
+    "sqlmodel>=0.0.27",
 ]
