Added Alembic for DB Versioning/Migrations

--- a/backend/services/auth/pyproject.toml
+++ b/backend/services/auth/pyproject.toml
@@ -5,6 +5,7 @@ description = "Authentication Service"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.18.1",
     "fastapi[standard]>=0.122.0",
     "psycopg2-binary>=2.9.11",
     "pwdlib[argon2]>=0.3.0",
