--- a/backend/services/auth/pyproject.toml
+++ b/backend/services/auth/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "pwdlib[argon2]>=0.3.0",
     "pyjwt>=2.10.1",
+    "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
     "sqlmodel>=0.0.27",
 ]
+[tool.pytest.ini_options]
+pythonpath = ["."]
